# astrbot-memory-cards

./: .gitignore  README.md  pyproject.toml
astrbot_plugin_memory_cards/: CHANGELOG.md  README.md  __init__.py  _conf_schema.json  extraction.py  injection.py  main.py  metadata.yaml  models.py  requirements.txt  retrieval.py  scheduler.py  store.py
astrbot_plugin_memory_cards/.astrbot-plugin/i18n/: en-US.json  zh-CN.json
astrbot_plugin_memory_cards/pages/memory/: app.js  index.html  style.css
docs/superpowers/plans/: 2026-06-13-automatic-memory-extraction.md  2026-06-13-memory-cards-implementation.md  2026-06-19-memory-quality-merge.md
docs/superpowers/specs/: 2026-06-13-automatic-memory-extraction-design.md  2026-06-13-memory-cards-design.md  2026-06-19-memory-quality-merge-design.md
tests/: astrbot_stubs.py  test_extraction.py  test_hooks.py  test_injection.py  test_plugin_contract.py  test_retrieval.py  test_scheduler.py  test_store.py  test_web_api.py  test_webui_contract.py
